--- a/css/style.css
+++ b/css/style.css
@@ -105,4 +105,21 @@ td > h2{
 .bNone{
 	border-bottom: none;
 }
-/**/
+/*lightbox*/
+
+.lightbox {
+	display: none;
+	position: fixed;
+	z-index: 999;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	top: 0;
+	left: 0;
+	background: rgba(0,0,0,0.9);
+}
+.lightbox > h1{
+	color: #fff0b7;
+	font-size: 3.5em;
+	padding-top: 280px; 
+}
